--- a/new.html
+++ b/new.html
@@ -27,10 +27,10 @@
     </nav>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="assets/img/claire.jpg">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="https://www.ntpu.edu.tw/admin/a3/files/a3_photo/20190805162930.jpg">
                 <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper">內容簡介</span><span class="section-heading-lower">Claire</span></h2>
-                    <p class="mb-3"><e5><88>澈撌乩<bd><9c></p>
+                    <p class="mb-3">職涯經驗分享講座</p>
                     <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="#">Visit Us Today!</a></div>
                 </div>
             </div>
